My First Commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,33 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+# Gradle
+.gradle/
+build/
+*/build/
+
+# Local config
 local.properties
+
+# IDE files
+.idea/
+*.iml
+
+# Logs
+*.log
+
+# Generated
+captures/
+.externalNativeBuild/
+.cxx/
+
+# Keystores
+*.jks
+*.keystore
+
+# System
+.DS_Store
+Thumbs.db
+
+# Google Services
+google-services.json
+
+# Profiling
+*.hprof
