now it can correctly handle category fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -45,9 +46,6 @@
             android:exported="false" />
         <activity
             android:name=".OrderSummaryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CartActivity"
             android:exported="false" />
         <activity
             android:name=".ProductDetailActivity"
